--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,7 @@ dependencies {
     implementation 'org.parceler:parceler-api:1.1.12'
     annotationProcessor 'org.parceler:parceler:1.1.12'
     implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.synnapps:carouselview:0.1.5'
+    implementation 'com.google.firebase:firebase-ads:15.0.1'
 }
